<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_courses_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CoursesActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:activity=".LearnJavaActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarCourses"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?android:colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageButton
                        android:id="@+id/settings_icon"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:onClick="settingsOnClick"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/action_settings"
                        android:layout_gravity="end"
                        android:layout_marginEnd="@dimen/margin"
                        android:src="@drawable/settings_icon" />

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <!-- Actual content of the activity -->
        <RelativeLayout
            android:id="@+id/coursesRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- When the background task finished this is showing -->
           <LinearLayout
               android:id="@+id/coursesLayout"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_alignParentTop="true"
               android:visibility="gone"
               tools:visibility="visible"
               android:layout_marginTop="@dimen/margin"
               android:gravity="center"
               android:orientation="vertical">

               <RelativeLayout
                   android:id="@+id/adContainer"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="@dimen/margin"
                   android:layout_marginEnd="@dimen/margin"
                   android:gravity="center">

                   <TextView
                       android:id="@+id/adStatusLabel"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_centerInParent="true"
                       android:text="@string/loading_ad"/>
               </RelativeLayout>

               <ListView
                   android:id="@+id/courseSelectors"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent" />

           </LinearLayout>

            <!-- Drop down all floating button. -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/dropDownAllIcon"
                android:contentDescription="@string/drop_down_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/margin"
                android:src="@drawable/dropdown_icon"
                app:borderWidth="0dp"
                app:backgroundTint="?colorPrimaryDark"
                app:tint="?learnJavaTextColor"
                app:rippleColor="@android:color/white"
                app:fabSize="normal"/>

            <!-- Loading indicator -->
            <ProgressBar
                android:id="@+id/loadingIndicator"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="visible"
                tools:visibility="gone"/>
        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/view_nav_header"
        app:menu="@menu/learn_java_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>