...
    <string name="course_development_info">This course is in development! More chapters will be released in the future.</string>
    <string name="swipe_horizontally">Swipe horizontally</string>
    <string name="drop_down_all">Drop down all</string>

    <!-- Ads -->
    <string name="loading_ad">Loading ad…</string>
    <string name="ad_load_fail">Ad failed to load!</string>
    <!-- Individual ad IDs are extracted, and only present on my machine. No ads build type works without them. -->

    <!-- Settings -->
    <string name="notifications">Notifications</string>
    <string name="exam_notifications">Enable exam notifications</string>
    <string name="difficulty">Difficulty</string>
...
    <string name="before_you_start">Read the guide before you start:</string>
    <string name="start_learning">Start learning</string>
    <!-- When the user already started some course -->
    <string name="continue_where_you_left_off">Continue where you left off</string>

    <!-- Exam selection -->
    <string name="take_exam">Take exam</string>
    <string name="exam_countdown_prompt">Exam available in</string>
    <string name="exam_locked">Exam locked</string>
    <string name="exam_unfinished">Exam in development</string>
    <string name="exam_development_info">This exam is currently in development! It can\'t be used for now.</string>
    <string name="hour_suffix">h</string>
    <string name="minute_suffix">m</string>
...
    <string name="exam_failed">Exam failed!</string>
    <string name="points">points</string>
    <string name="ongoing_exam">Ongoing exam</string>
    <string name="ongoing_exam_detail">Don\'t forget to finish the exam!</string>
    <string name="top_score">Top score:</string>
    <string name="no_answer_given">No answer given…</string>
    <string name="confirm_exam_start">Are you sure you want to start this exam?</string>

    <!-- Question -->
    <string name="question_icon">Question status icon</string>
    <string name="unanswered_question">There is 1 unanswered question!</string>
    <string name="unanswered_questions">There are %1$s unanswered questions!</string>
    <string name="multi_choice">multiple choices possible</string>
...
