<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="ad_view_banner_id" type="id"/>
</resources>